아이콘 변경

--- a/0430MFCApp/0430MFCApp.vcxproj
+++ b/0430MFCApp/0430MFCApp.vcxproj
@@ -208,6 +208,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\0430MFCApp.ico" />
+    <Image Include="res\icon1.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
