--- a/0430MFCApp/0430MFCApp.vcxproj.filters
+++ b/0430MFCApp/0430MFCApp.vcxproj.filters
@@ -59,5 +59,8 @@
     <Image Include="res\0430MFCApp.ico">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="res\icon1.ico">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
